# velora-beta

./: .env.example  Dockerfile  README.md  VELORA_CLUSTER_BETA_STATO.html  VELORA_GUIDA_PUBBLICAZIONE.html  VELORA_PROMPT_CONVERSIONE_SITI_PER_Codex.txt  VELORA_README_DEPLOY_SITI.txt  VELORA_STATO_LAVORI_BETA.html  heroku.yml  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/schema/: local.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ADMIN_CONTROL_CENTER.md  ADMIN_KEY_RECOVERY.md  ARCHITECTURE.md  BETA_COMPLETION_AUDIT.md  BETA_DOWNLOADS.md  BETA_GO_LIVE_CHECKLIST.md  BETA_LOGICAL_NODE_ARCHITECTURE.md  BETA_LOGICAL_NODE_AUDIT.md  BETA_LOGICAL_NODE_LIMITS.md  BETA_LOGICAL_NODE_OPERATIONS.md  BETA_LOGICAL_NODE_RECOVERY.md  CODEX_PUBLISH_TO_VELORA_TEMPLATE.md  DEPLOY_HEROKU_REAL.md  DISTRIBUTION_UX_AUDIT.md  EMERGENCY_MODE.md  FUTURE_REAL_NODE_MIGRATION.md  HEROKU_DEPLOY.md  HEROKU_EXIT_PLAN.md  LICENSING.md  MACOS_BETA_INSTALLATION.md  MACOS_BUILD_PIPELINE.md  MACOS_KNOWN_LIMITATIONS.md  MACOS_SUPPORT.md  MACOS_TROUBLESHOOTING.md  MULTIPLATFORM_RELEASE.md  PARENTAL_CONTROLS.md  PRIVACY_LEVELS.md  PROTOCOL.md  PUBLIC_BETA_COMPLETION_AUDIT.md  PUBLISHING.md  PUBLISHING_ON_VELORA.md  RECOVERY.md  THREAT_MODEL.md  VELOMAIL_ABUSE_PREVENTION.md  VELOMAIL_ADMIN_GUIDE.md  VELOMAIL_AND_MULTIPLATFORM_AUDIT.md  VELOMAIL_ARCHITECTURE.md  VELOMAIL_DEVICE_LIMITS.md  VELOMAIL_ENCRYPTION.md  VELOMAIL_KNOWN_LIMITATIONS.md  (+12 more)
scripts/: velora-node  (+32 more)
(+62 files in other folders)
