[package]
name = "velora-desktop"
version = "0.1.0"
description = "Velora beta desktop client"
authors = ["Velora"]
edition = "2021"

[package.metadata]

[lib]
name = "velora_desktop_lib"
crate-type = ["rlib"]

[[bin]]
name = "velora-desktop"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
blake3 = "1.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
